--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ hr {
     /* margin: 1%; */
     /* text-align: center; */
     align-items: center;
-    overflow-y: hidden;
+    overflow-y: visible;
 }
 .hamberger-menu {
     display: none;
@@ -96,7 +96,7 @@ hr {
     overflow-y: hidden;
 
     position: relative; /* ✅ makes stacking context clear */
-    z-index: 1;         /* ✅ ensures banners stay below menus */
+    /* z-index: 1;         ✅ ensures banners stay below menus */
 }
 
 .banner {
@@ -178,6 +178,7 @@ footer {
     background-color: black;
     /* padding-left: 10%; */
     padding: 5px;
+    display: none;
 }
 footer p {
     color: beige;
